# ChangeLog for app-arch/unrar-gpl
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/unrar-gpl/ChangeLog,v 1.2 2005/01/01 12:00:50 eradicator Exp $

*unrar-gpl-0.0.1 (13 Dec 2004)

  13 Dec 2004; Hanno Boeck <hanno@gentoo.org> +unrar-gpl-0.0.1.ebuild:
  Initial commit, GPL-version of unrar.
