@@ -1,1 +1,3 @@
-MD5 ac284a6739e3b8c794e7f9e8c20ed8f8 unrar_0.0.1.orig.tar.gz 315463
+MD5 ac284a6739e3b8c794e7f9e8c20ed8f8 unrar-0.0.1.tar.gz 315463
+RMD160 bcf2bef4f9f71d766a8165e4803e079dcefa0f31 unrar-0.0.1.tar.gz 315463
+SHA256 e757f3bdaf7efbdff40a303a3021429885cf3b94c51cffba877a48e7ba92f5b9 unrar-0.0.1.tar.gz 315463
