@@ -1,17 +1,17 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/unrar-gpl/Attic/unrar-gpl-0.0.1.ebuild,v 1.2 2005/01/01 12:00:50 eradicator Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/unrar-gpl/Attic/unrar-gpl-0.0.1.ebuild,v 1.3 2006/03/09 13:48:33 hanno Exp $
 
 inherit eutils
 DESCRIPTION="Free rar unpacker"
-HOMEPAGE="http://ftp.debian.org/debian/pool/main/u/unrar/"
-SRC_URI="mirror://debian/pool/main/u/unrar/unrar_${PV}.orig.tar.gz"
+HOMEPAGE="http://home.gna.org/unrar/"
+SRC_URI="http://download.gna.org/unrar/${P/-gpl}.tar.gz"
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~x86"
 IUSE=""
 DEPEND="!app-arch/unrar"
-S=${WORKDIR}/unrar-${PV}
+S=${WORKDIR}/${P/-gpl}
 
 src_compile() {
 	econf || die "econf failed"
