@@ -1,6 +1,9 @@
 # ChangeLog for app-arch/unrar-gpl
-# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/unrar-gpl/ChangeLog,v 1.2 2005/01/01 12:00:50 eradicator Exp $
+# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/unrar-gpl/ChangeLog,v 1.3 2006/03/09 13:48:33 hanno Exp $
+
+  09 Mar 2006; Hanno Boeck <hanno@gentoo.org> unrar-gpl-0.0.1.ebuild:
+  Fix URLs.
 
 *unrar-gpl-0.0.1 (13 Dec 2004)
 
